<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My Information</string>
    <string name="share_it">Share It</string>
    <string name="rate_it">Rate It</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="my_information">My Information</string>
    <string name="change_language">Change Language</string>
    <string name="firstNameView">First Name:</string>
    <string name="lastNameView">Last Name:</string>
    <string name="add_user">Add User</string>
    <string name="users">Users</string>
    <string name="enter_firstName">Enter FirstName</string>
    <string name="enter_lastName">Enter LastName</string>
    <string name="button_save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="idNumberView">ID Number:</string>
    <string name="Update">Update</string>
    <string name="Delete">Delete</string>
    <string name="delete_user_button">Delete User</string>
    <string name="update_user_button">Update</string>
    <string name="success_updated">Successfully updated!</string>
    <string name="success_deleted">Successfully deleted!</string>
    <string name="success_added">Successfully added!</string>
    <string name="please_fill_all_fields">Please fill out all fields!</string>
    <string name="afmView">AFM</string>
    <string name="amkaView">AMKA</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>