<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <EditText
        android:id="@+id/firstName_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_firstName"/>

    <EditText
        android:id="@+id/lastName_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_lastName"/>

    <Button
        android:id="@+id/button_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_save"/>

</LinearLayout>