<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/language"
        android:icon="@drawable/ic_baseline_language_24"
        android:title="@string/change_language"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_baseline_share_24"
        android:title="@string/share_it"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/rate"
        android:icon="@drawable/ic_baseline_star_rate_24"
        android:title="@string/rate_it"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/privacy_police"
        android:icon="@drawable/ic_baseline_privacy_tip_24"
        android:title="@string/privacy_police"
        app:showAsAction="ifRoom" />

</menu>