<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/firstName_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="@color/purple_500"
        android:text="@string/firstNameView"/>

    <TextView
        android:id="@+id/lastName_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="@color/purple_500"
        android:text="@string/lastNameView"/>

    <Button
        android:id="@+id/delete_user_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_user_button"/>

</LinearLayout>