<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/firstNameUpdateView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="@color/purple_500"
        android:text="@string/firstNameView"
        />

    <EditText
        android:id="@+id/firstName_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="@color/purple_500"/>

    <TextView
        android:id="@+id/lastNameUpdateView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="@color/purple_500"
        android:text="@string/lastNameView"
        />

    <EditText
        android:id="@+id/lastName_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="@color/purple_500"/>

    <Button
        android:id="@+id/update_user_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_user_button"/>

</LinearLayout>